# paramat

./: .readthedocs.yaml  README.md  setup.cfg
docs/source/: conf.py
src/: fitting.py  plotting.py  poi_reader.py  processing.py  receipts.py  sampling.py
src/paramat/: fitting.py  plotting.py  poi_reader.py  processing.py  receipts.py  sampling.py
