[metadata]
name = paramat-test
version = 0.1
author = Daniel Slater
author_email = sltdan002@myuct.ac.za
description = Provides functionality for automated post-processing and analysis of stress-strain datasets.
long_description = file: README.rst
url = https://github.com/dan-slater/paramat
project_urls =
    Documentation = https://paramat.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src